# fluvio

./: Cargo.toml
.github/workflows/: ci.yml
crates/fluvio-cli/: Cargo.toml
crates/fluvio-cli-common/: Cargo.toml
crates/fluvio-cli-common/src/: lib.rs
crates/smartmodule-development-kit/: Cargo.toml
tests/cli/fluvio_smoke_tests/: smartmodule-basic.bats
