[package]
name = "fluvio-cli-common"
version = "0.0.0"
edition = "2021"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Fluvio CLI common code"
repository = "https://github.com/infinyon/fluvio"
license = "Apache-2.0"
publish = false

[lib]
name = "fluvio_cli_common"
path = "src/lib.rs"

[features]
default = ["fluvio-types"]
file-records = ["fluvio-protocol/record", "fluvio-protocol/api"]

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true, features = ["std", "io-compat"]}
home = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
isahc = { version = "1.7", default-features = false, features = ["static-curl"] }
semver = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

fluvio = { path = "../fluvio", default-features = false }
fluvio-package-index = { workspace = true,  features = ["http_agent"] }
fluvio-types = { workspace = true , optional = true }
fluvio-protocol = { workspace = true,  optional = true }
fluvio-future = { workspace = true }
fluvio-sc-schema = { path = "../fluvio-sc-schema" }
fluvio-smartmodule = { path = "../fluvio-smartmodule",  default-features = false }
fluvio-smartengine = { path = "../fluvio-smartengine", features = ["transformation"] }

[dev-dependencies]
fluvio-future = { workspace = true, features = ["fs", "io", "subscriber", "native2_tls", "fixture"] }
